<resources>
    <string name="app_name">Registration App</string>
    <string name="text_size">18sp</string>
    <string name="label_font">sans-serif-black</string>
    <string name="input_font">sans-serif-medium</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="fullname">Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="phone">Phone Number</string>
    <string name="hint_fullname">Enter Full Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_age">Enter Age to date</string>
    <string name="hint_phone">+94711234567</string>
</resources>